css/main.css
/* OVERARCHING CSS */

* {
    box-sizing: border-box;
}

nav ul {
  padding: 0;
}

nav ul li {
  display: inline-block;
}

nav ul li a {
  color: black;
  text-decoration: none;
  padding: 17px 15px;
  opacity: 0.9;
}

nav ul li a:hover {
  color: #2081C3;
}

body {
  font-family: "Helvetica";
  font-style: normal;
  text-align: center;
  text-decoration: none;
  margin: 0 auto;
}

/* Home Page CSSs */

.heading {
  z-index: 10;
  position: relative;
  margin: 0 auto;
  top: 15px;
  color: black;
  background: white;
  width: 30%;
}

.centraldiv {
  z-index: 9;
  position: relative;
  margin: 0 auto;
  top: -25px;
  border-top-style: solid;
  border-top-width: thin;
  width: 90%;
}

/* Homepage CSS */

.subimgborder {
  padding: 50px;
}

.home {
  position: relative;
  margin: 0 auto;
  width: 70%;
}

.about {
  position: relative;
  margin: 0 auto;
  width: 70%;
  padding-top: 20px;
  text-align: left;
  font-size: 110%;
  line-height: 140%;
}

.about a {
  color: #A3ABB0;
  text-decoration: none;
}

.about a:hover {
  color: #525658;
}

/* Resume / Coursework CSS */

.category {
  position: relative;
  margin: 0 auto;
  width: 70%;
  padding: 20px;
  top: 60px;
  font-size: 125%;
  font-weight: bold;
}

.category a {
  color: #A3ABB0;
  text-decoration: none;
}

.category a:hover {
  color: #525658;
}

.list ul {
  margin: 0;
  padding: 0;
  text-align: left;
  list-style-type: none;
  font-size: 90%;
  font-weight: normal;
  line-height: 150%;
}

.list ul span {
  position: relative;
  left: 40px;
}

/* About CSS */

.secondnav {
  position: relative;
  margin: 0 auto;
  width: 49%;
  padding: 40px 0 0 0;
}

.secondnav nav {
  border-bottom-style: solid;
  border-bottom-width: thin;
}

.aboutpage {
  position: relative;
  margin: 0 auto;
  width: 70%;
  top: 20px;
}

.moment img {
  padding: 5px 0 0 0;
  width: 70%;
}

.moment .content {
  position: relative;
  margin: 0 auto;
  width: 70%;
  padding: 1px 0 0 0;
  text-align: left;
  line-height: 150%;
}

.moment h1 {
  position: relative;
  font-size: 140%;
  padding: 0 0 5px 0;
  border-bottom-style: solid;
  border-bottom-width: thin;
  text-align: center;
}

.moment h2 {
  font-size: 115%;
  padding: 0 0 5px 0;
  border-bottom-style: solid;
  border-bottom-width: thin;
}

/* Blog CSS */

.post a {
  color: #A3ABB0;
  text-decoration: none;
}

.post a:hover {
  color: #525658;
}

.postlist a {
  color: #A3ABB0;
  text-decoration: none;
}

.postlist a:hover {
  color: #525658;
}

.postlist {
  list-style-type: none;
  margin: 0;
  padding: 20px 0 0 0;
  line-height: 150%;
}

.post {
  position: relative;
  margin: 0 auto;
  width: 49%;
}

.post p {
  text-align: left;
  line-height: 150%;
}

.post .posthead {
  font-size: 120%;
  text-align: center;
}

/* Mobile CSS */

@media only screen and (max-width:1140px) {
  .heading {
    font-size: 80%;
  }
  
  .centraldiv {
    top: -17px;
  }
}

@media only screen and (max-width:1000px) {
  .heading {
    font-size: 70%;
  }
  
  .centraldiv {
    top: -13px;
  }
}

@media only screen and (max-width:800px) {
  .heading {
    font-size: 60%;
  }
  
  .centraldiv {
    top: -9px;
  }
}

@media only screen and (max-width:620px) {
  nav ul li a {
  padding: 17px 5px;
  }
  
  .heading {
    top: -5px;
    width: 100%;
    font-size: 100%;
  }
  
  .centraldiv {
    border-top-style: none;
    width: 100%;
    top: -50px;
  }
  
  .home {
    width: 100%;
  }
  
  .about {
    width: 100%;
    padding-top: 20px;
  }
  
  .list ul {
    text-align: center;
  }
  
  .hide {
    font-size: 0%;
  }
  
  .secondnav {
    width: 70%;
  }
  
  .aboutpage {
    width: 100%;
  }
  
  .aboutpage hr {
    width: 80%;
  }
  
  .content h2 {
    font-size: 80%;
  }
  
  .content p {
    font-size: 70%;
  }
    
  .post {
    width: 70%;
  }
}

